# glam-radiomics

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: Makefile  _how_to_compile.txt.txt  make.bat
docs/source/: conf.py  features.rst  glam_radiomics.rst  home.rst  index.rst  installation.rst  modules.rst  releasenotes.rst  usage.rst
docs/source/_templates/: layout.html
docs/source/theory/: geometric_classes.rst  statistical_mechanics.rst
src/glam_radiomics/: config.py  core.py  mapping.py  run.py  utils.py
